2007-03-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c:
   Delay updating interface items when switching notebook tabs until
   after the page has changed, so it appears to switch pages faster.
 * src/treeviews.c, src/notebook.c:
   Don't recreate the open files items when DnD reordering tabs, now
   that the open files treeview is sorted alphabetically.
 * src/project.c:
   Make suggested New Project filename use the projects/ directory as
   parent directory, instead of projects/name/.


2007-03-13  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/highlighting.c: Fixed wrong margin colours for filetype All/None.
 * src/highlighting.c: Init the default styles before first usage.


2007-03-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Use tab stops for status bar line, column and selection data to stop
   the other fields being moved so often when browsing code or typing.
   Rearrange status bar statistics to be clearer/more concise.
 * src/document.c:
   Count total replacements made when replacing in a rectangular
   selection.
 * src/keybindings.c, src/keybindings.h, src/callbacks.c,
   src/callbacks.h, doc/geany.docbook:
   Add 'Switch to last used document' keybinding.


2007-03-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook: Added description for disable-server command line
                      option for Xfce Terminal.
 * src/project.c: Added missing whitespace (found by Frank).


2007-03-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c:
   Switch to Compiler window when using Next Error command.
 * src/utils.c, src/document.c:
   Update the status bar after setting the document file type, if it
   has changed.
   Update the status bar after colourising open files, so the current
   tag is accurate.


2007-03-10  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/project.c:
   Separate New Project dialog from Project Properties dialog.