@@ -105,6 +105,8 @@ enum
 	GEANY_KEYS_EDIT_SENDTOCMD2,
 	GEANY_KEYS_EDIT_SENDTOCMD3,
 	GEANY_KEYS_EDIT_GOTOMATCHINGBRACE,
+	GEANY_KEYS_EDIT_GOTONEXTMARKER,
+	GEANY_KEYS_EDIT_GOTOPREVIOUSMARKER,
 	GEANY_KEYS_EDIT_AUTOCOMPLETE,
 	GEANY_KEYS_EDIT_CALLTIP,
 	GEANY_KEYS_EDIT_MACROLIST,
