@@ -331,33 +331,36 @@ gboolean sci_is_marker_set_at_line(ScintillaObject* sci, gint line, gint marker)
 }
 
 
-gboolean sci_marker_next(ScintillaObject* sci, gint line, gint marker_mask)
+/* Returns the line number of the next marker that matches marker_mask, or -1.
+ * marker_mask is a bitor of 1 << marker_index. (See MarkerHandleSet::MarkValue()).
+ * Note: If there is a marker on the line, it returns the same line. */
+gint sci_marker_next(ScintillaObject* sci, gint line, gint marker_mask, gboolean wrap)
 {
 	gint marker_line;
 
 	marker_line = SSM(sci, SCI_MARKERNEXT, line, marker_mask);
-
-	if( marker_line != -1 ){
-		SSM(sci,SCI_GOTOLINE,marker_line,0);
-		return TRUE;
-	}else{
-		return FALSE;
-	}
+	if (wrap && marker_line == -1)
+		marker_line = SSM(sci, SCI_MARKERNEXT, 0, marker_mask);
+	return marker_line;
 }
 
 
-gboolean sci_marker_prev(ScintillaObject* sci, gint line, gint marker_mask)
+/* Returns the line number of the previous marker that matches marker_mask, or -1.
+ * marker_mask is a bitor of 1 << marker_index. (See MarkerHandleSet::MarkValue()).
+ * Note: If there is a marker on the line, it returns the same line. */
+gint sci_marker_previous(ScintillaObject* sci, gint line, gint marker_mask, gboolean wrap)
 {
 	gint marker_line;
 
 	marker_line = SSM(sci, SCI_MARKERPREVIOUS, line, marker_mask);
+	if (wrap && marker_line == -1)
+	{
+		gint len = sci_get_length(sci);
+		gint last_line = sci_get_line_from_position(sci, len - 1);
 
-	if( marker_line != -1 ){
-		SSM(sci,SCI_GOTOLINE,marker_line,0);
-		return TRUE;
-	}else{
-		return FALSE;
+		marker_line = SSM(sci, SCI_MARKERPREVIOUS, last_line, marker_mask);
 	}
+	return marker_line;
 }
 
 
